datatables  errors fixed

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,59 +1,83 @@
 
+/* Custom Datatables CSS */
+table.dataTable thead th,
+table.dataTable thead td, 
+table.dataTable.no-footer ,
+.dataTables_wrapper.no-footer .dataTables_scrollBody {
+  border-bottom: 2px solid #e3e6ec !important;
+}
+
+.dataTables_wrapper .dataTables_filter input[type=search]:focus {
+  outline: none; 
+  border: 2px solid #06794f;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+   z-index: 3;
+   color: #fff !important;
+   background-color: #06794f;
+   border: 1px solid #06794f;
+   background: transparent !important
+}
+
+/*End of Custom Datatables CSS */
+
 .visibility-off {
-  display: none !important;
+ display: none !important;
 }
 
- .material-icons {
-  font-size: 20px !important;
+.material-icons {
+ font-size: 20px !important;
 }
 
- .md-18 {
-  font-size: 18px !important;
- }
+.md-18 {
+ font-size: 18px !important;
+}
 
- .md-24 {
-   font-size: 24px !important;
- }
+.md-24 {
+  font-size: 24px !important;
+}
 
- .md-32 {
-  font-size: 32px !important;
- }
+.md-32 {
+ font-size: 32px !important;
+}
 
- .md-48 {
-   font-size: 48px !important;
- }
+.md-48 {
+  font-size: 48px !important;
+}
 
 .client-details-card-body {
-  padding: 1rem !important;
+ padding: 1rem !important;
 }
 
 .custom-card-footer-padding{
-   padding: 0.72rem 1.35rem !important;
+  padding: 0.72rem 1.35rem !important;
 }
 
 .center-div{
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .table-min-height {
-   min-height: 50px !important;
-   margin-bottom: 300px;
+  min-height: 50px !important;
+  margin-bottom: 300px;
 }
 
 .recent-actvity-card-min-height {
-   min-height: 300px !important;
-   margin-bottom: 300px;
+  min-height: 300px !important;
+  margin-bottom: 300px;
 }
 
 .recent-activity-wrapper {
-   min-height: 255px !important;
+  min-height: 255px !important;
 }
-
 
 .fileInput{
    width: 0px;
    height: 0px;
 }
+
